[package]
name = "wamr_wasi_socket"
version = "0.2.0"
authors = ["Yi <yi@secondstate.io>", "J <julian.scott@gapfruit.com>" ]
edition = "2021"
license = "Apache-2.0"
description = "Rust API for the networking socket functions supported in the WAMR Runtime for WebAssembly. Based off wamr_wasi_socket by yi@secondstate.io"
repository = "https://github.com/syborg64/wamr_wasi_socket"
readme = "README.md"
categories = ["network-programming"]
keywords = ["http", "tcp", "socket", "webassembly", "wamr"]

[lib]
name = "wamr_wasi_socket"
path = "src/lib.rs"

[dependencies]
libc = "0.2.3"

[features]
default = ["iov", "udp", "opt", "addrinfo"]
wasi_poll = []
epoll = []
# set/get sockopt functions
opt = []
# readv / writev functions
iov = []
# udp sockets
udp = ["iov"]
# sock_addr_resolve 
addrinfo = []

[[example]]
name = "get_addrinfo"
required-features = ["addrinfo"]

[[example]]
name = "try_sock_opt"
required-features = ["opt"]

[[example]]
name = "try_dns"
required-features = ["opt"]

[[example]]
name = "udp_reverse"
required-features = ["udp"]

[[example]]
name = "udp_socket"
required-features = ["udp"]
